--- a/site/css/style.css
+++ b/site/css/style.css
@@ -5,7 +5,8 @@
 }
 body {
     font-family: "Roboto Regular", Helvetica, Arial, sans-serif;
-    font-size: 16px;
+    font-size: 16px
+    
 }
 
 .section_first, .section_fifth, .section_seventh {
